--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -12,26 +12,18 @@ body {
   font-family: monospace;;
 }
 
-.container-tabs {
-
-  .tab {
-    //border: solid 1px white;
-    display: inline-block;
-    width: 50%;
-    float: left;
-    padding-top: 25px;
-    padding-bottom: 25px;
-  }
-
-  .tab-active {
-    background-color: $colour-fg;
-  }
-
+.tab {
+  background-color: $colour-bg;
+  display: inline-block;
+  width: 50%;
+  float: left;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
-
-
-
+.tab-active {
+  background-color: $colour-fg;
+}
 
 .text-center {
   text-align: center;
@@ -43,4 +35,8 @@ body {
 
 .clearfix {
   clear: both;
+}
+
+.hidden {
+  display: none;
 }
