Implemented Tab Contents via Web

--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -9,7 +9,7 @@ body {
   background-color: $colour-bg;
   color: #FFFFFF;
   font-size: 100%;
-  font-family: monospace;;
+  font-family: monospace;
 }
 
 .tab {
@@ -39,4 +39,73 @@ body {
 
 .hidden {
   display: none;
+}
+
+.clearfix {
+  clear: both;
+}
+.container-tab-contents {
+  padding: 25px;
+}
+
+
+.container-tab-contents-web {
+
+  .container-form {
+
+    margin: 0 auto;
+    width: 80%;
+
+    .container-input {
+      margin: 5px;
+
+      input[type="text"] {
+        margin: 5px;
+        background-color: $colour-bg;
+        border: solid 0px $colour-bg;
+
+        height: 40px;
+        width: 100%;
+
+        font-family: monospace;
+        font-size: 20px;
+        color: #FFFFFF;
+
+        text-align: center;
+      }
+
+    }
+
+    .container-buttons {
+      button {
+        height: 40px;
+        background-color: $colour-bg;
+        color: #FFFFFF;
+        border: solid 1px $colour-fg;
+
+        padding-left: 30px;
+        padding-right: 30px;
+
+        font-family: monospace;
+      }
+    }
+
+  }
+
+  .table {
+
+    margin: 0 auto;
+    display: table;
+
+
+    .row {
+      display: table-row;
+    }
+
+    .col {
+      display: table-cell;
+      padding: 10px;
+    }
+  }
+
 }
